--- a/studentDetails.html
+++ b/studentDetails.html
@@ -19,15 +19,24 @@
 			  <span class="input-group-addon" id="basic-addon1"><i class="fa fa-user-circle-o" aria-hidden="true"></i></span>
 			  <input type="text" class="form-control" placeholder="fathers Name" id="fathrName" />
 			</div>
-			<div class="input-group">
-			  <span class="input-group-addon" id="basic-addon1"><i class="fa fa-calendar" aria-hidden="true"></i></span>
-			  <input type="date" class="form-control" placeholder="date of birth" id="dob" />
+			<div class="row">
+				<div class="col-sm-8">
+					<div class="input-group">
+					  <span class="input-group-addon" id="basic-addon1"><i class="fa fa-calendar" aria-hidden="true"></i></span>
+					  <input type="date" class="form-control" placeholder="date of birth" id="dob" onchange="dateUpDate()" />
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<div class="input-group">
+					  <span class="input-group-addon" id="basic-addon1">Age</span>
+					  <input type="text" class="form-control" id="age" readonly />
+					</div>
+				</div>
 			</div>
 			<div class="input-group">
 			  <span class="input-group-addon" id="basic-addon1"><i class="fa fa-users" aria-hidden="true"></i></span>
-			  <select class="form-control" placeholder="class" id="className">
+			  <select class="form-control" placeholder="class" id="selectclassOpt" onchange="getselectClassName()">
 			  	<option value="" disabled selected>Select class</option>
-			  	<option>one</option>
 			  </select>
 			</div>
 			<div class="input-group">
@@ -38,14 +47,32 @@
 			  <span class="input-group-addon" id="basic-addon1"><i class="fa fa-venus-mars" aria-hidden="true"></i></span>
 			  <span class="form-control" id="gender">
 			  	 	<span><i class="fa fa-male colorCf244b" aria-hidden="true"></i></span>
-				  <input type="radio" class="radioBtn" value="male" checked="checked" id="male" onClick="findGender('male')" />
+				  <input type="radio" class="radioBtn" value="male" id="male" onClick="findGender('male')" />
 				  <span class="marginleft25"><i class="fa fa-female colorCf244b" aria-hidden="true"></i></span>
-				  <input type="radio" class="radioBtn" value="female" id="female" onClick="findGender('female')"/>
+				  <input type="radio" class="radioBtn" value="female" checked id="female" onClick="findGender('female')"/>
 			  </span>
 			</div>
 			<div class="input-group">
 			  <span class="input-group-addon" id="basic-addon1"><i class="fa fa-address-book" aria-hidden="true"></i></span>
 			  <input type="text" class="form-control" placeholder="address" id="address" />
+			</div>
+			<div class="row">
+				<div class="col-sm-8">
+					<div class="input-group">
+						<span class="input-group-addon" id="basic-addon1">
+							<i class="fa fa-industry" aria-hidden="true"></i>
+						</span>
+						<select class="form-control" placeholder="class" id="state" onchange="getStateName()">
+				  			<option value="" disabled selected>Select State</option>
+				  		</select>
+			  		</div>
+				</div>
+				<div class="col-sm-4">
+					<div class="input-group">
+					  <span class="input-group-addon" id="basic-addon1">Pin</span>
+					  <input type="text" value="12" class="form-control" id="pincode" />
+					</div>
+				</div>
 			</div>
 			<div>
   				<button type="button" class="registered" onclick="registeredStudent()">Registered</button>
@@ -60,8 +87,8 @@
     <th>D.O.B</th>
     <th>Age</th>
     <th>Class</th>
-    <th>Roll</th>
     <th>Gender</th>
+    <th>state</th>
   </tr>
   <tr>
     <td>Alfreds Futterkiste</td>
@@ -69,8 +96,8 @@
     <td>Germany</td>
     <td>23</td>
     <td>Alfreds Futterkiste</td>
-    <td>Maria Anders</td>
     <td>Germany</td>
+    <td>Bihar</td>
     <td><i class="fa fa-eye" aria-hidden="true"></i></td>
      <td><i class="fa fa-pencil" aria-hidden="true"></i></td>
     <td><i class="fa fa-trash" aria-hidden="true"></i></td>
