--- a/studentDetails.html
+++ b/studentDetails.html
@@ -70,7 +70,7 @@
 				<div class="col-sm-4">
 					<div class="input-group">
 					  <span class="input-group-addon" id="basic-addon1">Pin</span>
-					  <input type="text" value="12" class="form-control" id="pincode" />
+					  <input type="text" class="form-control" id="pincode" />
 					</div>
 				</div>
 			</div>
