--- a/studentDetails.html
+++ b/studentDetails.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>student details</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="css/custom.css">
 </head>
@@ -80,12 +80,11 @@
 		</div>
 		<!-- right section -->
 		<div class="col-sm-8 pull-right right_Sec">
-			<table>
+<table id="main-table">
   <tr>
     <th>Name</th>
     <th>Fathers Name</th>
     <th>D.O.B</th>
-    <th>Age</th>
     <th>Class</th>
     <th>Gender</th>
     <th>state</th>
@@ -94,17 +93,52 @@
     <td>Alfreds Futterkiste</td>
     <td>Maria Anders</td>
     <td>Germany</td>
-    <td>23</td>
-    <td>Alfreds Futterkiste</td>
+    <td>ten</td>
     <td>Germany</td>
     <td>Bihar</td>
     <td><i class="fa fa-eye" aria-hidden="true"></i></td>
      <td><i class="fa fa-pencil" aria-hidden="true"></i></td>
     <td><i class="fa fa-trash" aria-hidden="true"></i></td>
-  </tr>
-  
+  </tr> 
 </table>
 		</div>
+	</div>
+</div>
+<!--------- popup box -------------->
+<div class="overlay" id="overlay">
+	<div class="container overlay-inner">
+		<h1 class="stdntName">Mrs. Shadab Zilani</h1>
+		<div class="row">
+			<div class="col-sm-3">Father's Name - </div>
+			<div class="col-sm-9" class="fathrNam">Md Shallauddin</div>
+		</div>
+		<div class="row">
+				<div class="col-sm-3">Date of birth - </div>
+				<div class="col-sm-3" class="stdntDob">12-05-17</div>
+				<div class="col-sm-3">Age - </div>
+				<div class="col-sm-3" class="stdntAge">12</div>
+		</div>
+		<div class="row">
+				<div class="col-sm-3">Class - </div>
+				<div class="col-sm-3" class="sdntClass">Ten</div>
+				<div class="col-sm-3">Roll - </div>
+				<div class="col-sm-3" class="stdntRoll">12</div>
+		</div>
+		<div class="row">
+				<div class="col-sm-3">Gender - </div>
+				<div class="col-sm-9" class="stdntGendr">Male</div>
+		</div>
+		<div class="row">
+				<div class="col-sm-3">Adress - </div>
+				<div class="col-sm-9" class="stdntAddrs">j-25 Batla house jamia nagar Ohkla</div>
+		</div>
+		<div class="row">
+				<div class="col-sm-3">State - </div>
+				<div class="col-sm-3" class="stdntStat">Bihar</div>
+				<div class="col-sm-3">Pin Code - </div>
+				<div class="col-sm-3" class="stdntPin">811311</div>
+		</div>
+		<span class="close" onclick="hideDiv('overlay')">X</span>
 	</div>
 </div>
 <script type="text/javascript" src="js/custom.js"></script>
